# metis-agent-harness

./: .env.example  .gitignore  CHANGELOG.md  Metis-Agent-Harness-构建方案.md  Metis-Agent-Harness-架构抽取与设计报告.md  Metis-Agent-Harness-详细任务清单.md  README.md  metis-agent.json  pyproject.toml
docs/: Metis-优化方案-完整版.md  app-surfaces.md  architecture.md  behavior-rules.md  developer-workbench.md  extension-guide.md  metis-complete-technical-report-2026-05-25.md  module-spec.md  plugin-development.md  plugin-quickstart.md  security-model.md  small-model-mode.md  testing-strategy.md
docs/analysis/: metis-gap-analysis-2026-05-27.md  metis-harness-infrastructure-task-breakdown-2026-05-25.md  metis-harness-open-problems-and-task-breakdown-2026-05-25.md  metis-infrastructure-gap-analysis-and-task-list.md  metis-task-breakdown-2026-05-27.md
docs/audits/: fifth-round-final-verification.md  fourth-round-audit-report.md  second-round-audit-report.md
docs/evals/: 9b-eval-report.md  repair-plan-ci-recipe.md  (+2 more)
metis/: __init__.py  __main__.py  config.py  logging.py  package_lifecycle.py
tests/: test_budget_config.py  test_config_defaults.py  test_context_engine.py  test_e2e_iteration199.py  test_events.py  test_logging.py  test_parsers_unit.py  test_planning_models.py  test_provider_base.py  test_provider_client_lifecycle.py  test_rename_delete_tools.py  test_retry_jitter.py  test_runtime_types.py  test_schema_validator.py  test_search_find_tools.py  test_security_paths.py  test_shutdown.py  test_sqlite_store.py  test_tool_failures.py  test_tool_spec_registry.py  test_web_tools.py
(+663 files in other folders)
